--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
     <title>Sibusiso's Portfolio</title>
 </head>
 <body>
-    
-    <script src="#"></script>
+    <header>
+        <img src="https://i.postimg.cc/D0qNj82m/profile-Image.png" alt="logo" ><!--loading=lazy makes the image load faster-->
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Resume</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Testimonial</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- <script src="#"></script> -->
 </body>
 </html>
  
