--- a/index.html
+++ b/index.html
@@ -9,19 +9,45 @@
 </head>
 <body>
     <header>
-        <img src="https://i.postimg.cc/D0qNj82m/profile-Image.png" alt="logo" ><!--loading=lazy makes the image load faster-->
+        <img src="https://i.postimg.cc/D0qNj82m/profile-Image.png" alt="logo" loading="lazy"><!--loading=lazy makes the image load faster-->
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Testimonial</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#loading">Home</a></li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#project">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#testimonials">Testimonial</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <section id="landing">
+            <h2>Landing Page</h2>
+        </section>
+        <section id="About">
+            <h2>About</h2>
+        </section>
+        <section id="resume">
+            <h2>Resume</h2>
+        </section>
+        <section id="project">
+            <h2>Project</h2>
+        </section>
+        <section id="Skills">
+            <h2>Skills</h2>
+        </section>
+        <section id="testimonials">
+            <h2>Testimonials</h2>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+        </section>
+    </main>
+    <footer>
+        <p>copyright &copy;Sibusiso Dyan 2023</p>
+    </footer>
     <!-- <script src="#"></script> -->
 </body>
 </html>
