--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><!---root element-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +9,11 @@
 </head>
 <body>
     <header>
-        <img src="https://i.postimg.cc/D0qNj82m/profile-Image.png" alt="logo" loading="lazy"><!--loading=lazy makes the image load faster-->
+             <!--loading=lazy makes the image load faster-->
+        <a href="#landing"><img src="https://i.postimg.cc/ZRv2WVCn/benimaru.jpg"id="logo" alt="logo" loading="lazy"></a>
         <nav>
             <ul>
-                <li><a href="#loading">Home</a></li>
+                <li><a href="#landing">Home</a></li>
                 <li><a href="#About">About</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#project">Projects</a></li>
