ade a few changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><!---root element-->
+<html lang="en"><!---root element/parent element-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +23,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main><!----section with the main content--->
         <section id="landing">
             <h2>Landing Page</h2>
         </section>
